--- a/error.js.html
+++ b/error.js.html
@@ -34,7 +34,7 @@
         <ul></ul>
     </div>
     
-    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="module.exports_module.exports.html">exports</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="module.exports#module.exports_sub"></div></li><li><a href="SBLApi.html">SBLApi</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="SBLApi_sub"><div class="member-type">Methods</div><ul class="inner"><li><a href="SBLApi.html#getBotLikes">getBotLikes</a></li><li><a href="SBLApi.html#getBotLikes">getBotLikes</a></li><li><a href="SBLApi.html#postServerCount">postServerCount</a></li><li><a href="SBLApi.html#postServerCount">postServerCount</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3><a href="global.html">Global</a></h3></div>
+    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="SBLApi.html">SBLApi</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="SBLApi_sub"><div class="member-type">Methods</div><ul class="inner"><li><a href="SBLApi.html#getBotLikes">getBotLikes</a></li><li><a href="SBLApi.html#getBotLikes">getBotLikes</a></li><li><a href="SBLApi.html#postServerCount">postServerCount</a></li><li><a href="SBLApi.html#postServerCount">postServerCount</a></li></ul></div></li><li><a href="SBLError.html">SBLError</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="SBLError_sub"></div></li></ul></div><div class="lnb-api hidden"><h3><a href="global.html">Global</a></h3></div>
 </nav>
 <div id="resizer"></div>
 
@@ -46,7 +46,7 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>module.exports = class SBLError extends Error {
+            <pre class="prettyprint source linenums"><code>class SBLError extends Error {
 	/**
 	 * SBL Api error
 	 * @param {any} message - the error message
@@ -61,6 +61,8 @@
 		super(message);
 	}
 }
+
+module.exports = SBLError;
 </code></pre>
         </article>
     </section>
