deploy: 535efb9558064886d0332c73535d13f31e8eaa7b

--- a/index.html
+++ b/index.html
@@ -57,31 +57,25 @@
     <section>
         <article class="readme"><h1>SBL.js</h1>
 <p>API wrapper for <a href="https://smartbots.tk">smartbots.tk</a> API</p>
-<!--
-## Deployment
-
-To deploy this project run
-
-```bash
-  npm i SBL
-```
-
-  
-## Installation
-
-Install my-project with npm
-
-```bash
-  npm install SBL
-  cd SBL
-```
--->
+<h2>Installation</h2>
+<p>To install with npm</p>
+<pre class="prettyprint source lang-bash"><code>npm install @rishiraj0100/sbl.js
+</code></pre>
 <h2>Documentation</h2>
-<p>Under construction <a href="https://sbljs.rtfd.io">Documentation</a></p>
+<h3>Classes</h3>
+<ul>
+<li>SBLApi   - <a href="https://js.docs.smartbots.tk/SBLApi.html">Click Here</a></li>
+<li>SBLError - <a href="https://js.docs.smartbots.tk/SBLError.html">Click Here</a></li>
+</ul>
+<h3>Type Definitions</h3>
+<ul>
+<li>APIBotLikes - <a href="https://js.docs.smartbots.tk/global.html#APIBotLikes">Click Here</a></li>
+</ul>
 <h2>SBL STUFFS</h2>
 <ul>
 <li><a href="https://smartbots.tk">WEBSITE</a></li>
-<li><a href="https://discord.gg/v4xbS3V6tq">DISCORD</a></li>
+<li><a href="https://smartbots.tk/join">DISCORD</a></li>
+<li><a href="https://py.docs.smartbots.tk">Python Api</a></li>
 </ul></article>
     </section>
 
