--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <nav class="lnb" id="lnb">
-    <div class="logo" style="">
+    <div class="logo" style="; height: 200px">
         
             <a href="https://js.docs.smartbots.tk" rel="noopener noreferrer" target="_blank">
                 <img src="https://cdn.discordapp.com/icons/878513630793056297/e206ad3903fc35b98fe2ef505897bb5d.png?size=1024" width="100%" height="100%">
@@ -89,7 +89,7 @@
 </div>
 
 <footer>
-    <img class="logo" src="https://cdn.discordapp.com/icons/878513630793056297/e206ad3903fc35b98fe2ef505897bb5d.png?size=1024" style="">
+    <img class="logo" src="https://cdn.discordapp.com/icons/878513630793056297/e206ad3903fc35b98fe2ef505897bb5d.png?size=1024" style="; height: 200px">
     <div class="footer-text">SmartBots | SBL</div>
 </footer>
 <script>prettyPrint();</script>
