deploy: 93ce8ec5d94c2433db53db50373c01545162724f

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 <nav class="lnb" id="lnb">
-    <div class="logo" style="; height: 200px">
+    <div class="logo" style="; height: 150px">
         
-            <a href="https://js.docs.smartbots.tk" rel="noopener noreferrer" target="_blank">
+            <a href="https://smartbots.tk" rel="noopener noreferrer" target="_blank">
                 <img src="https://cdn.discordapp.com/icons/878513630793056297/e206ad3903fc35b98fe2ef505897bb5d.png?size=1024" width="100%" height="100%">
             </a>
         
@@ -89,7 +89,7 @@
 </div>
 
 <footer>
-    <img class="logo" src="https://cdn.discordapp.com/icons/878513630793056297/e206ad3903fc35b98fe2ef505897bb5d.png?size=1024" style="; height: 200px">
+    <img class="logo" src="https://cdn.discordapp.com/icons/878513630793056297/e206ad3903fc35b98fe2ef505897bb5d.png?size=1024" style="; height: 150px">
     <div class="footer-text">SmartBots | SBL</div>
 </footer>
 <script>prettyPrint();</script>
