deploy: 0daad98c070ccd8f77c761f23f647052b4736e48

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <pre class="prettyprint source lang-bash"><code>npm install @rishiraj0100/sbl.js
 </code></pre>
 <h2>Documentation</h2>
+<p><a href="https://js.docs.smartbots.tk/">Click Here</a></p>
 <h3>Classes</h3>
 <ul>
 <li>SBLApi   - <a href="https://js.docs.smartbots.tk/SBLApi.html">Click Here</a></li>
